--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>GroceReady</title><!--would like to report michael wu (not really)-->
+		<title>GrocerReady</title><!--would like to report michael wu (not really)-->
 		
 		<meta charset="UTF-8">
 		
@@ -17,28 +17,44 @@
 	<h1 id="headerText">
 		
 		
-		<a class="headerNavText"></a><a id="headerTitle" href="index.html"> GroceReady </a>
+		<a class="headerNavText"></a><a id="headerTitle" href="index.html"> GrocerReady </a>
 		
 	</h1>
-		
+
+
 </header>
 		
 <div id="wrapper">
 			
-<img src="Resources/Images/fireice.png" alt="helloworld" width=1000 class="pageBanner"> <!-- Not specifying height so the height:width ratio is correct-->
+<img src="Resources/Images/coolfood.png" alt="Delicious spread of dishes" width=1000 class="pageBanner"> <!-- Not specifying height so the height:width ratio is correct-->
 		
-<h1>Our Story</p></h1> 			
+<h2>Our Project</p></h2> 			
 <hr>
 			
-	<p>We started GroceReady in order to simplify the busy live of real people and take a step toward zero food waste. GroceReady allows people to plan ahead and buy ingredients for all their meals during the week.</p>
-			
-	<p class="break">
-Our inspiring story here. It all started when...</p>
+	<p>We started GrocerReady in order to simplify the busy live of real people. GrocerReady helps you plan out all the groceries you need for your meals. Simply upload your favourite recipes, and we'll give you your shopping list! By participating in GrocerReady, you can reduce the amount of excess food purchased, and take a step towards zero food waste. </p>
 	
-<h1>Demo</p></h1>	
-	<br>	
-			
-	<h1>Contact<p class="h2">info</p></h1>
+
+	<p class="break">
+</p>
+	
+<h2>How to use</p></h2>	
+	<ol>
+		<li> Open up the GrocerReady app. </li> <br>
+		<li> Copy and paste the URLS to the recipes you would like to make. </li> <br>
+		<li> Hit enter to have your recipes assembled into a list. </li> <br>
+		<li> Once all your recipes have been included, hit submit. </li> <br>
+		<li> Enjoy your printable list of ingredients, we hope you found our app helpful! :-) </li> <br>
+	</ol>
+
+<br>
+<h2>Our Plans<p class = "h2">for the future</p></h1>	
+	<p> Everybody wants to focus their time on the things that matter. This is where we come in. GrocerReady has plans to partner with online grocery stores, to deliver exactly what you need to fix your favourite dishes. Yo edit this crap. <p>
+<br>
+<h2>Support</h2>
+	<p> We currently support recipes on Allrecipes.com and Foodnetwork.ca. Please stay tuned as 
+	we are working on making GrocerReady compatible with more websites.</p>
+<br>
+<h1>Contact<p class="h2">info</p></h1>
 	<!--"info" beside in smaller font-->
 		
 <hr>
