--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 <h2>Support</h2>
 	<p> We currently support recipes on Allrecipes.com and Foodnetwork.ca. Please stay tuned as 
 	we are working on making GrocerReady compatible with more websites.</p>
+    
+    <h2>About us</h2>
+	<p>Team Members: Ana Han, Michael Shi, Lokeesan Kaneshwaran, Devdigvijay Singh</p>
 
 <h1>More</h1>
 	
